--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,34 @@
 
 *{
   font-family: "Poppins";
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+ul {
+  list-style-type: none !important;
+}
+
+.collection-item {
+  list-style: none !important;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .flex{
   display: flex;
+  align-items: center;
   justify-content: space-between;
-  flex-wrap: wrap;
+  padding: 10px 0;
+}
+
+.btn-remove{
+  border: none;
+  background-color: transparent;
+  font-size: 20px;
+  font-weight: bold;
+  color: red;
+  cursor: pointer;
 }
